Phase 2 LMS backend updates: batch-centric architecture, assignment module, kafka integration, docker setup